--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,6 +8,12 @@
     android:orientation="vertical"
     tools:context=".Activities.HomeActivity">
 
+    <ViewStub
+        android:id="@+id/splashVs"
+        android:layout="@layout/activity_splash"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
     <!--    toolBar-->
     <RelativeLayout
         android:id="@+id/toolbarRl"
