--- a/app/src/main/res/layout/dialog_sub_buy.xml
+++ b/app/src/main/res/layout/dialog_sub_buy.xml
@@ -2,12 +2,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="220dp"
-    android:layout_marginLeft="55dp"
+    android:layout_width="250dp"
+    android:layout_height="180dp"
+    android:layout_marginLeft="80dp"
     android:layout_marginRight="55dp"
     android:layout_centerInParent="true"
-    android:background="@android:color/transparent"
+    android:background="@color/gray02"
     >
 
     <LinearLayout
@@ -110,7 +110,7 @@
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="80dp"
+        android:layout_marginLeft="60dp"
         android:layout_marginTop="130dp">
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -136,7 +136,7 @@
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="175dp"
+        android:layout_marginLeft="155dp"
         android:layout_marginTop="130dp">
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
