--- a/app/src/main/res/layout/row_pdf_user.xml
+++ b/app/src/main/res/layout/row_pdf_user.xml
@@ -57,6 +57,8 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true">
 
+
+
                 <TextView
                     android:id="@+id/categoryTv"
                     android:layout_width="wrap_content"
@@ -81,16 +83,28 @@
                     style="@style/TextAppearance.MaterialComponents.Caption"/>
 
                 <TextView
+                    android:id="@+id/subNumTv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:maxLines="1"
+                    android:text="총 편수"
+                    android:textColor="@color/black"
+                    android:layout_toEndOf="@id/viewCountTv"
+                    style="@style/TextAppearance.MaterialComponents.Caption"/>
+
+                <TextView
                     android:id="@+id/dateTv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
                     android:maxLines="1"
                     android:text="Date"
                     android:textColor="@color/black"
-                    android:layout_toEndOf="@id/viewCountTv"
-                    android:layout_toStartOf="@id/categoryTv"
-                    android:textAlignment="center"
+                    android:layout_toEndOf="@id/subNumTv"
                     style="@style/TextAppearance.MaterialComponents.Caption"/>
+
+
 
 
 
