--- a/app/src/main/res/drawable/shape_btn02.xml
+++ b/app/src/main/res/drawable/shape_btn02.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
 
 
-    <solid android:color="#8EBCE1"/>
+    <solid android:color="#008DFF"/>
 
 
     <corners android:radius="10dp"/>
