--- a/app/src/main/res/layout/activity_text_view.xml
+++ b/app/src/main/res/layout/activity_text_view.xml
@@ -75,18 +75,20 @@
 
                 <RelativeLayout
                     android:id="@+id/spinnerRl"
-                    android:layout_width="100dp"
-                    android:layout_height="40dp"
+                    android:layout_width="70dp"
+                    android:layout_height="30dp"
                     android:layout_marginRight="30dp"
+                    android:layout_marginTop="8dp"
                     android:layout_below="@id/afterTitleTv"
                     android:background="@drawable/shape_spinner01"
                     android:layout_alignParentRight="true">
 
                     <Spinner
                         android:id="@+id/pageSpinner"
-                        android:layout_width="25dp"
-                        android:layout_height="25dp"
-                        android:layout_marginTop="10dp"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginRight="3dp"
                         android:layout_alignParentRight="true"
                         android:background="@drawable/selector_spinner"/>
 
@@ -95,10 +97,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_toStartOf="@+id/pageSpinner"
-                        android:padding="8dp"
+                        android:padding="5dp"
                         android:textColor="@color/black"
-                        android:textSize="16sp"
-                        android:text="1 페이지"/>
+                        android:textSize="12sp"
+                        android:text="페이지"/>
 
                 </RelativeLayout>
 
@@ -141,9 +143,11 @@
                 <!--        댓글 버튼-->
                 <ImageButton
                     android:id="@+id/addCommentBtn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="30dp"
+                    android:layout_height="25dp"
                     android:layout_below="@id/commentsLabelTv"
+                    android:layout_marginTop="18dp"
+                    android:layout_marginRight="10dp"
                     android:layout_alignParentEnd="true"
                     android:background="@android:color/transparent"
                     android:src="@drawable/ic_comment_add_black"
