--- a/app/src/main/res/layout/row_home_book.xml
+++ b/app/src/main/res/layout/row_home_book.xml
@@ -2,7 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
-    android:layout_height="150dp"
+    android:layout_height="180dp"
     app:cardBackgroundColor="#F4F4F4"
     app:cardCornerRadius="5dp"
     android:layout_marginLeft="3dp"
@@ -10,14 +10,15 @@
 
     <RelativeLayout
         android:id="@+id/clikable"
-        android:layout_width="85dp"
-        android:layout_height="140dp">
+        android:layout_width="110dp"
+        android:background="@drawable/background_wallpaper"
+        android:layout_height="170dp">
 
         <!--        pdf-->
         <RelativeLayout
             android:id="@+id/pdfRl"
-            android:layout_width="70dp"
-            android:layout_height="90dp"
+            android:layout_width="100dp"
+            android:layout_height="120dp"
             android:layout_centerHorizontal="true"
             android:layout_marginStart="3dp"
             android:layout_marginEnd="3dp"
@@ -46,9 +47,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="3dp"
-                android:maxLines="1"
-                android:text="Book Title"
-                android:textColor="@color/black" />
+                android:textSize="11sp"
+                android:maxLines="2"
+                android:text="로드 오브 미스테리"
+                android:textStyle="bold"
+                android:textColor="@color/white" />
 
 
             <TextView
@@ -56,20 +59,21 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/titleTv"
-                android:layout_marginLeft="3dp"
-                android:textSize="9sp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="3dp"
+                android:textSize="10sp"
                 android:text="조회수"
-                android:textColor="@color/black" />
+                android:textColor="@color/white" />
 
-            <TextView
-                android:id="@+id/favoriteCountTv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/viewCountTv"
-                android:layout_marginLeft="3dp"
-                android:textSize="9sp"
-                android:text="count"
-                android:textColor="@color/black" />
+<!--            <TextView-->
+<!--                android:id="@+id/favoriteCountTv"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_below="@id/viewCountTv"-->
+<!--                android:layout_marginLeft="3dp"-->
+<!--                android:textSize="9sp"-->
+<!--                android:text="count"-->
+<!--                android:textColor="@color/black" />-->
 
 
             <TextView
@@ -82,7 +86,7 @@
                 android:layout_marginRight="3dp"
                 android:textSize="10sp"
                 android:text="category"
-                android:textColor="@color/black"/>
+                android:textColor="@color/white"/>
 
 
         </RelativeLayout>
