--- a/app/src/main/res/layout/row_pdf_sub.xml
+++ b/app/src/main/res/layout/row_pdf_sub.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
+    android:layout_height="60dp"
     app:cardUseCompatPadding="false"
     android:layout_marginTop="2dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -24,6 +24,7 @@
                 style="@style/TextAppearance.MaterialComponents.Body1"
                 android:textColor="@color/black"
                 android:layout_marginLeft="15dp"
+                android:layout_marginTop="3dp"
                 android:text="No."/>
 
             <TextView
@@ -33,6 +34,7 @@
                 style="@style/TextAppearance.MaterialComponents.Body1"
                 android:textColor="@color/black"
                 android:layout_toRightOf="@id/subNumberTv"
+                android:layout_marginTop="3dp"
                 android:layout_marginLeft="15dp"
                 android:text=" 책 제목"/>
 
@@ -52,6 +54,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="3dp"
             android:orientation="horizontal">
 
             <TextView
@@ -96,6 +99,15 @@
                 android:textColor="@color/gray01"
                 android:layout_marginLeft="5dp"
                 android:text=" recommend"/>
+
+            <TextView
+                android:id="@+id/commentTv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=" 0"
+                android:drawableStart="@drawable/ic_comment_blue"
+                android:textColor="@color/gray01"
+                android:layout_marginLeft="15dp"/>
 
         </LinearLayout>
 
